syntax = "proto3";
package com.linkedout.proto.models;

message Employer {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string picture = 4;
  string phone = 5;
}
